[gd_scene load_steps=18 format=3 uid="uid://wfo6boyk67m8"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_ablgk"]
[ext_resource type="Script" path="res://Scenes and Scripts/Classes/line_edit.gd" id="1_ju25l"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ColourPicker/palette_item.gd" id="1_memmu"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="2_j3oiu"]
[ext_resource type="FontVariation" uid="uid://c5fyui7qqu420" path="res://Resources/Themes/line_edit.tres" id="5_pktjy"]
[ext_resource type="Texture2D" uid="uid://d16opu3dyhri7" path="res://Textures/Buttons/eye/eye_open.png" id="6_5d7ij"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="8_pa48w"]
[ext_resource type="Theme" uid="uid://cfmbhoq8cuoge" path="res://Resources/Themes/ProjectTheme.tres" id="11_l36jc"]
[ext_resource type="PackedScene" uid="uid://dp48r81q855wa" path="res://Scenes and Scripts/UI/ColourPicker/colour_button.tscn" id="11_m2xhs"]
[ext_resource type="Texture2D" uid="uid://cms1u4elh5bo3" path="res://Textures/Buttons/icons/delete.png" id="12_ipd10"]
[ext_resource type="Theme" uid="uid://c7hk3afo5tria" path="res://Resources/Themes/toggle_button.tres" id="14_ylj5d"]
[ext_resource type="Texture2D" uid="uid://dwh7e30xi8v07" path="res://Textures/Buttons/Tabs/arrow_down.png" id="15_sejjs"]
[ext_resource type="Texture2D" uid="uid://bt1qr2mxq14l8" path="res://Textures/Buttons/icons/restart.png" id="16_8spqa"]
[ext_resource type="Texture2D" uid="uid://uuymrv72pyyc" path="res://Textures/Buttons/icons/shuffle.png" id="17_xlgvh"]
[ext_resource type="Texture2D" uid="uid://qxw17ji0dvra" path="res://Textures/Buttons/icons/share.png" id="18_0mlca"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f4av7"]
content_margin_top = 1.0
content_margin_bottom = 1.0

[sub_resource type="ButtonGroup" id="ButtonGroup_yrxm2"]

[node name="PaletteItem" type="PanelContainer" node_paths=PackedStringArray("UseButton", "MoreColoursButton", "MoreColoursContainer", "ClearButton", "DeleteButton", "UploadButton", "Title", "Shuffle", "PrimaryColourButton", "GridColourButton", "SecondaryColourButton", "TextColourButton", "GridShadowColourButton", "ActiveColourButton", "DisabledColourButton", "Shadow1ColourButton", "Shadow2ColourButton")]
material = ExtResource("1_ablgk")
use_parent_material = true
offset_right = 12.0
offset_bottom = 12.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_f4av7")
script = ExtResource("1_memmu")
UseButton = NodePath("VBoxContainer/HBoxContainer/HBoxContainer/View")
MoreColoursButton = NodePath("VBoxContainer/HBoxContainer/More")
MoreColoursContainer = NodePath("VBoxContainer/MoreContainer")
ClearButton = NodePath("VBoxContainer/MoreContainer/HBoxContainer/Clear")
DeleteButton = NodePath("VBoxContainer/HBoxContainer/HBoxContainer2/Buttons/Delete")
UploadButton = NodePath("VBoxContainer/HBoxContainer/HBoxContainer2/Buttons/Upload")
Title = NodePath("VBoxContainer/HBoxContainer/HBoxContainer/Title")
Shuffle = NodePath("VBoxContainer/MoreContainer/HBoxContainer/Randomise")
PrimaryColourButton = NodePath("VBoxContainer/HBoxContainer/HBoxContainer2/Colours/Primary")
GridColourButton = NodePath("VBoxContainer/HBoxContainer/HBoxContainer2/Colours/Grid")
SecondaryColourButton = NodePath("VBoxContainer/HBoxContainer/HBoxContainer2/Colours/Secondary")
TextColourButton = NodePath("VBoxContainer/MoreContainer/GridContainer/VBoxContainer/Text")
GridShadowColourButton = NodePath("VBoxContainer/MoreContainer/GridContainer/VBoxContainer2/GridShadow")
ActiveColourButton = NodePath("VBoxContainer/MoreContainer/GridContainer/VBoxContainer3/Active")
DisabledColourButton = NodePath("VBoxContainer/MoreContainer/GridContainer/VBoxContainer6/Disabled")
Shadow1ColourButton = NodePath("VBoxContainer/MoreContainer/GridContainer/VBoxContainer4/Shadow1")
Shadow2ColourButton = NodePath("VBoxContainer/MoreContainer/GridContainer/VBoxContainer5/Shadow2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0

[node name="View" parent="VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("2_j3oiu")]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("14_ylj5d")
minimum_size = Vector2(22, 22)
toggle_mode = true
button_group = SubResource("ButtonGroup_yrxm2")
icon = ExtResource("6_5d7ij")

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/HBoxContainer/View" instance=ExtResource("8_pa48w")]
tooltip = "View Problems"

[node name="Title" type="LineEdit" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(80, 22)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("5_pktjy")
placeholder_text = "[Enter Title]"
max_length = 10
editable = false
script = ExtResource("1_ju25l")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 2

[node name="Colours" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="Primary" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Colours" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
colour_name = "Primary"

[node name="Secondary" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Colours" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
colour_name = "Secondary"

[node name="Grid" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Colours" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
colour_name = "Grid"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer2"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = -1

[node name="Delete" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Buttons" instance=ExtResource("2_j3oiu")]
material = null
layout_mode = 2
mouse_filter = 1
theme = ExtResource("11_l36jc")
minimum_size = Vector2(20, 20)
action_mode = 1
icon = ExtResource("12_ipd10")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Buttons/Delete" instance=ExtResource("8_pa48w")]
tooltip = "Delete"

[node name="Upload" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Buttons" instance=ExtResource("2_j3oiu")]
material = null
layout_mode = 2
mouse_filter = 1
theme = ExtResource("11_l36jc")
minimum_size = Vector2(20, 20)
action_mode = 1
icon = ExtResource("18_0mlca")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/HBoxContainer2/Buttons/Upload" instance=ExtResource("8_pa48w")]
tooltip = "Share"

[node name="More" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_j3oiu")]
material = null
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
theme = ExtResource("14_ylj5d")
minimum_size = Vector2(17, 16)
toggle_mode = true
icon = ExtResource("15_sejjs")
icon_use_parent_material = true

[node name="Tooltip" parent="VBoxContainer/HBoxContainer/More" instance=ExtResource("8_pa48w")]
tooltip = "More"

[node name="MoreContainer" type="VBoxContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MoreContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 2
columns = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MoreContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
text = "Text"
horizontal_alignment = 1

[node name="Text" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(26, 18)
layout_mode = 2
colour_name = "Text"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MoreContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer2"]
use_parent_material = true
layout_mode = 2
text = "Grid Shadow"
horizontal_alignment = 1

[node name="GridShadow" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer2" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(26, 18)
layout_mode = 2
colour_name = "Grid Shadow"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/MoreContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer3"]
use_parent_material = true
layout_mode = 2
text = "Active"
horizontal_alignment = 1

[node name="Active" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer3" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(26, 18)
layout_mode = 2
colour_name = "Active"

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/MoreContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer4"]
use_parent_material = true
layout_mode = 2
text = "Shadow 1"
horizontal_alignment = 1

[node name="Shadow1" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer4" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(26, 18)
layout_mode = 2
colour_name = "Shadow1"

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/MoreContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer5"]
use_parent_material = true
layout_mode = 2
text = "Shadow 2"
horizontal_alignment = 1

[node name="Shadow2" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer5" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(26, 18)
layout_mode = 2
colour_name = "Shadow2 2"

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/MoreContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer6"]
use_parent_material = true
layout_mode = 2
text = "Disabled"
horizontal_alignment = 1

[node name="Disabled" parent="VBoxContainer/MoreContainer/GridContainer/VBoxContainer6" instance=ExtResource("11_m2xhs")]
custom_minimum_size = Vector2(26, 18)
layout_mode = 2
colour_name = "Disabled"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MoreContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="Clear" parent="VBoxContainer/MoreContainer/HBoxContainer" instance=ExtResource("2_j3oiu")]
visible = false
layout_mode = 2
minimum_size = Vector2(49, 21)
icon = ExtResource("16_8spqa")
icon_use_parent_material = true

[node name="Randomise" parent="VBoxContainer/MoreContainer/HBoxContainer" instance=ExtResource("2_j3oiu")]
layout_mode = 2
minimum_size = Vector2(49, 21)
icon = ExtResource("17_xlgvh")
icon_use_parent_material = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4

[connection signal="toggled" from="VBoxContainer/HBoxContainer/HBoxContainer/View" to="." method="_on_view_toggled"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/HBoxContainer/Title" to="." method="_on_title_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/Buttons/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/HBoxContainer2/Buttons/Upload" to="." method="_on_upload_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/More" to="." method="_on_more_toggled"]
[connection signal="pressed" from="VBoxContainer/MoreContainer/HBoxContainer/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="VBoxContainer/MoreContainer/HBoxContainer/Randomise" to="." method="_on_randomise_pressed"]
